@@ -769,7 +769,7 @@ void write_to_conv(struct conversation *c, char *what, int flags)
 */
 
         if (general_options & OPT_GEN_POPUP_WINDOWS)
-                gdk_window_raise(c->window->window);
+                gdk_window_show(c->window->window);
 
         
 	g_free(buf);
@@ -796,6 +796,8 @@ void show_conv(struct conversation *c)
 	GtkWidget *toolbar;
 	GtkWidget *bbox;
         GtkWidget *vbox;
+	GtkWidget *vbox2;
+	GtkWidget *paned;
         GtkWidget *add;
         GdkPixmap *strike_i, *small_i, *normal_i, *big_i, *bold_i, *italic_i, *underline_i, *speaker_i, *wood_i, *palette_i, *link_i;
         GtkWidget *strike_p, *small_p, *normal_p, *big_p, *bold_p, *italic_p, *underline_p, *speaker_p, *wood_p, *palette_p, *link_p;
@@ -827,7 +829,14 @@ void show_conv(struct conversation *c)
 
         bbox = gtk_hbox_new(TRUE, 0);
 	vbox = gtk_vbox_new(FALSE, 0);
+	vbox2 = gtk_vbox_new(FALSE, 0);
+	paned = gtk_vpaned_new();
 
+	gtk_paned_pack1(GTK_PANED(paned), vbox, FALSE, TRUE);
+	gtk_paned_pack2(GTK_PANED(paned), vbox2, FALSE, FALSE);
+	gtk_widget_show(vbox2);
+	gtk_widget_show(paned);
+	
 	entry = gtk_text_new(NULL, NULL);
 	gtk_text_set_editable(GTK_TEXT(entry), TRUE);
 	gtk_text_set_word_wrap(GTK_TEXT(entry), TRUE);
@@ -993,7 +1002,7 @@ void show_conv(struct conversation *c)
 	gtk_signal_connect(GTK_OBJECT(color), "clicked", GTK_SIGNAL_FUNC(color_callback), c);
        
 	gtk_signal_connect(GTK_OBJECT(entry), "key_press_event", GTK_SIGNAL_FUNC(user_keypress_callback), c);
-	gtk_widget_set_usize(entry, 300, 70);
+	gtk_widget_set_usize(entry, 300, 25);
 
 	gtk_box_pack_start(GTK_BOX(bbox), send, TRUE, TRUE, 5);
 	gtk_box_pack_start(GTK_BOX(bbox), info, TRUE, TRUE, 5);
@@ -1006,9 +1015,9 @@ void show_conv(struct conversation *c)
 	/* pack and fill the rest */
 
 	gtk_box_pack_start(GTK_BOX(vbox), sw, TRUE, TRUE, 5);
-        gtk_box_pack_start(GTK_BOX(vbox), toolbar, FALSE, FALSE, 5);
-	gtk_box_pack_start(GTK_BOX(vbox), entry, FALSE, FALSE, 5);
-	gtk_box_pack_start(GTK_BOX(vbox), bbox, FALSE, FALSE, 5);
+        gtk_box_pack_start(GTK_BOX(vbox2), toolbar, FALSE, FALSE, 5);
+	gtk_box_pack_start(GTK_BOX(vbox2), entry, TRUE, TRUE, 5);
+	gtk_box_pack_start(GTK_BOX(vbox2), bbox, FALSE, FALSE, 5);
 
 	
 
@@ -1026,7 +1035,7 @@ void show_conv(struct conversation *c)
 	gtk_widget_show(text);
 	
 	
-	gtk_container_add(GTK_CONTAINER(win), vbox);
+	gtk_container_add(GTK_CONTAINER(win), paned);
         gtk_container_border_width(GTK_CONTAINER(win), 10);
 
 	if ((find_log_info(c->name)) || ((general_options & OPT_GEN_LOG_ALL)))
