@@ -3,6 +3,8 @@ GAIM: The Pimpin' Penguin IM Clone thats good for the soul!
 version 0.9.14:
 	* Numerous Fixes by G. Sumner Hayes (buffer over flow patches,
 	  etc)
+	* Paned Conversation Windows (Thanks Syd)
+	* Raise Window On Message Received, Fixed (Thanks Syd)
 
 version 0.9.13 (03/27/2000):
 	* Dialog Box Segfault Fixed (When You Click A Toggle Then Cancel)
